--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-mailer": "^0.3.1"
+    "express-mailer": "^0.3.1",
+    "nodemailer": "^6.2.1",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
