--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node_mail",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
@@ -15,6 +15,9 @@
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Miguel-Delgado",
+  "engines": {
+    "node": "10.x"
+  },
   "license": "ISC"
 }
