--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "express": "^4.17.3",
     "express-mailer": "^0.3.1",
     "nodemailer": "^6.2.1",
+    "resend": "^2.0.0",
     "xoauth2": "^1.2.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js"
   },
