--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.3",
-    "express-mailer": "^0.3.1",
-    "nodemailer": "^6.2.1",
-    "resend": "^2.0.0",
-    "xoauth2": "^1.2.0"
+    "resend": "^2.0.0"
   },
   "scripts": {
     "start": "node index.js"
